cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_285.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/provider.c:187: error: DEAD_STORE
  The value written to &argc (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/provider.c:187:5: Write of unused value
185.   
186.       /* Allow any trailing parameters as provider names. */
187.       argc = opt_num_rest();
           ^
188.       argv = opt_rest();
189.       for ( ; *argv; argv++) {
